chore: refactor to angular-cli for front-end ui build

--- a/uasdm-ui/src/app/admin/component/logo/system-logos.component.html
+++ b/uasdm-ui/src/app/admin/component/logo/system-logos.component.html
@@ -32,7 +32,7 @@
             ></a>
           </span></td>
           <td class="label-column">{{ icon.label }}</td>
-          <td class="icon-thumbnail-column"><img style="width: 42px; height: 42px;" class="thumb" [src]="context + '/logo/view?id=' + icon.oid" alt="Icon"></td>
+          <td class="icon-thumbnail-column"><img style="width: 42px; height: 42px;" class="thumb" [src]="context + 'logo/view?id=' + icon.oid" alt="Icon"></td>
         </tr>
       </tbody>
     </table>
