--- a/uasdm-ui/src/app/admin/component/logo/system-logo.component.html
+++ b/uasdm-ui/src/app/admin/component/logo/system-logo.component.html
@@ -22,7 +22,7 @@
 
                 <div>
                   <!-- For display only when editing an icon-->
-                  <img *ngIf="!file" style="max-width:300px;max-height:300px;" [src]="context + '/logo/view?id=' + oid" class="thumb">
+                  <img *ngIf="!file" style="max-width:300px;max-height:300px;" [src]="context + 'logo/view?id=' + oid" class="thumb">
                       
                   <!-- Actual uploaded file preview -->
                   <img *ngIf="file" style="max-width:300px;max-height:300px;" [src]="file" class="thumb">
