--- a/uasdm-ui/src/app/core/component/login/login-header.component.html
+++ b/uasdm-ui/src/app/core/component/login/login-header.component.html
@@ -4,7 +4,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" routerLink="/" [title]="'userMenu.menuTooltip' | localize">
-                <img [src]="context + '/logo/view?id=logo'" />
+                <img [src]="context + 'logo/view?id=logo'" />
             </a>
             <!-- <a class="navbar-brand" routerLink="/admin"><localize key="admin.link"></localize></a> -->
           </div>
