--- a/uasdm-ui/src/app/shared/component/generic-table/generic-table.component.html
+++ b/uasdm-ui/src/app/shared/component/generic-table/generic-table.component.html
@@ -1,36 +1,35 @@
 <div>
 
-	<p-table #dt [columns]="cols" [value]="page.resultSet" [autoLayout]="true" [scrollable]="true" [resizableColumns]="true" sortMode="multiple"
-		styleClass="p-datatable-gridlines" [lazy]="true" (onLazyLoad)="onPageChange($event)" [paginator]="true"
-		[totalRecords]="page.count" [rows]="page.pageSize" [loading]="loading"
-		[multiSortMeta]="config.sort != null ? [config.sort] : []">
-    
-        <ng-template pTemplate="colgroup" let-columns>
-            <colgroup>
-                <col *ngFor="let col of columns">
-            </colgroup>
-        </ng-template>
+	<p-table #dt [columns]="cols" [value]="page.resultSet" [autoLayout]="true" [scrollable]="true"
+		[resizableColumns]="true" sortMode="multiple" styleClass="p-datatable-gridlines" [lazy]="true"
+		(onLazyLoad)="onPageChange($event)" [paginator]="true" [totalRecords]="page.count" [rows]="page.pageSize"
+		[loading]="loading" columnResizeMode="expand" [multiSortMeta]="config.sort != null ? [config.sort] : []">
+
 
 		<ng-template pTemplate="header" let-columns>
 			<tr>
-				<th *ngFor="let col of columns" [pSortableColumn]="col.field" [pSortableColumnDisabled]="col.type === 'STRING-ARRAY' || col.field === 'product'" 
-                    [ngClass]="{'actions-col' : col.type === 'ACTIONS', 'map-service-col' : col.type === 'STRING-ARRAY'}" pResizableColumn>
+				<th *ngFor="let col of columns" [pSortableColumn]="col.field"
+					[pSortableColumnDisabled]="col.type === 'STRING-ARRAY' || col.field === 'product'"
+					[ngClass]="{'actions-col' : col.type === 'ACTIONS', 'map-service-col' : col.type === 'STRING-ARRAY'}"
+					pResizableColumn [style]="{'min-width':'200px'}">
 					{{col.header}}
-					<p-sortIcon *ngIf="col.sortable" [field]="col.field" ariaLabel="Activate to sort" style="float:right;"
-						ariaLabelDesc="Activate to sort in descending order" ariaLabelAsc="Activate to sort in ascending order">
-                    </p-sortIcon>
+					<p-sortIcon *ngIf="col.sortable" [field]="col.field" ariaLabel="Activate to sort"
+						style="float:right;" ariaLabelDesc="Activate to sort in descending order"
+						ariaLabelAsc="Activate to sort in ascending order">
+					</p-sortIcon>
 				</th>
 			</tr>
 			<tr>
-				<th *ngFor="let col of columns" [ngSwitch]="col.type">
-					<ng-container *ngIf="col.filter !== false" >
+				<th *ngFor="let col of columns" [ngSwitch]="col.type" [style]="{'min-width':'200px'}">
+					<ng-container *ngIf="col.filter !== false">
 						<input *ngSwitchCase="'URL'" pInputText type="text" placeholder="Filter by URL..."
 							(input)="handleInput(dt, $event.target, col, 'contains')">
 						<input *ngSwitchCase="'TEXT'" pInputText type="text" placeholder="Filter by text..."
 							(input)="handleInput(dt, $event.target, col, 'contains')">
 						<input *ngSwitchCase="'NUMBER'" pInputText type="number" placeholder="Filter by number..."
 							(input)="handleInput(dt, $event.target, col, 'equals')">
-						<p-dropdown *ngSwitchCase="'BOOLEAN'" appendTo="body" [options]="booleanOptions" placeholder="Filter by category..."
+						<p-dropdown *ngSwitchCase="'BOOLEAN'" appendTo="body" [options]="booleanOptions"
+							placeholder="Filter by category..."
 							(onChange)="handleInput(dt, $event.target, col, 'equals')" optionLabel="label"
 							optionValue="value" [virtualScroll]="true"></p-dropdown>
 					</ng-container>
@@ -41,9 +40,9 @@
 		<ng-template pTemplate="body" let-rowData let-columns="columns">
 			<tr>
 				<td *ngFor="let col of columns" [ngSwitch]="getColumnType(rowData, col)" class="ui-resizable-column"
-				 [ngClass]="{'actions-col' : col.type === 'ACTIONS', 'map-service-col' : col.type === 'STRING-ARRAY'}"
-				 [style]="col.type === 'ACTIONS' ? 'width: 100px; text-align: center;' : ''"
-				>
+					[ngClass]="{'actions-col' : col.type === 'ACTIONS', 'map-service-col' : col.type === 'STRING-ARRAY'}"
+					[style]="col.type === 'ACTIONS' ? 'width: 100px; text-align: center;' : ''"
+					[style]="{'min-width':'200px'}">
 					<ng-container *ngSwitchCase="'URL'">
 						<a [routerLink]="['/' + col.baseUrl + '/' + rowData[col.urlField]]">
 							{{rowData[col.field]}}
@@ -62,17 +61,17 @@
 							{{col.text}}
 						</a>
 					</ng-container>
-                    <ng-container *ngSwitchCase="'STRING-ARRAY'">
-                        <ul>
-                            <li *ngFor="let service of rowData[col.field]; let i = index">
-                                {{service}}
-                                <span *ngIf="i < rowData[col.field].length-1">
-                                    <br>
-                                    <br>
-                                </span>
-                            </li>
-                        </ul>
-                    </ng-container>
+					<ng-container *ngSwitchCase="'STRING-ARRAY'">
+						<ul>
+							<li *ngFor="let service of rowData[col.field]; let i = index">
+								{{service}}
+								<span *ngIf="i < rowData[col.field].length-1">
+									<br>
+									<br>
+								</span>
+							</li>
+						</ul>
+					</ng-container>
 					<ng-container *ngSwitchCase="'NONE'">
 					</ng-container>
 					<ng-container *ngSwitchDefault>
@@ -81,15 +80,16 @@
 				</td>
 			</tr>
 		</ng-template>
-<!-- 		<ng-template pTemplate="paginatorleft"> -->
-<!-- 			<p-button *ngIf="config.create" type="button" icon="pi pi-plus" [style]="{'border':'solid 1px'}" -->
-<!-- 				styleClass="p-button-text" [label]="'Add new ' + config.label" (click)="onClick('create', null, null)"> -->
-<!-- 			</p-button> -->
-<!-- 		</ng-template> -->
+		<!-- 		<ng-template pTemplate="paginatorleft"> -->
+		<!-- 			<p-button *ngIf="config.create" type="button" icon="pi pi-plus" [style]="{'border':'solid 1px'}" -->
+		<!-- 				styleClass="p-button-text" [label]="'Add new ' + config.label" (click)="onClick('create', null, null)"> -->
+		<!-- 			</p-button> -->
+		<!-- 		</ng-template> -->
 	</p-table>
-  
-    <div style="width:100%;text-align:right;">
-        <button *ngIf="config.create" (click)="onClick('create', null, null)" style="margin: 10px 0 0;" class="btn btn-primary">Add new {{config.label}}</button>
-    </div>
+
+	<div style="width:100%;text-align:right;">
+		<button *ngIf="config.create" (click)="onClick('create', null, null)" style="margin: 10px 0 0;"
+			class="btn btn-primary">Add new {{config.label}}</button>
+	</div>
 
 </div>
