chore: support for geoprism featuresets

--- a/uasdm-ui/src/app/shared/component/header/header.component.html
+++ b/uasdm-ui/src/app/shared/component/header/header.component.html
@@ -19,9 +19,7 @@
 
           <ul *dropdownMenu class="dropdown-menu">
             <li role="menuitem">
-              <a id="account-btn" class="user-command-link link-active" (click)="account()">
-                <localize key="userDashboards.account"></localize>
-              </a>
+              <a id="account-btn" class="user-command-link link-active" (click)="account()">Account</a>
             </li>
             <li role="menuitem">
               <a class="dropdown-item" routerLink="/site/tasks" routerLinkActive="active">Workflow Tasks</a>
