--- a/uasdm-ui/src/app/core/component/forgotpassword/forgotpassword.component.html
+++ b/uasdm-ui/src/app/core/component/forgotpassword/forgotpassword.component.html
@@ -8,6 +8,9 @@
         </h3>
       </div>
       <hr />
+      
+      <div *ngIf="message != null" class="alert alert-danger" role="alert">{{message}}</div>
+      
       <div class="form-group" *ngIf="!emailIsSent">
         <label>
           <localize key="forgotpassword.username"></localize>
