fix: fix for issue where the supported format of internal archive files was not being displayed when uploading to the raw directory

--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
@@ -173,7 +173,7 @@
                   <th>Formats</th>
                 </tr>
               </thead>
-              <tbody *ngIf="uploadTarget === 'row'">
+              <tbody *ngIf="uploadTarget === 'raw'">
                 <tr>
                   <td>RGB Image Data</td>
                   <td>jpg, jpeg, png</td>
