--- a/uasdm-ui/src/app/site/component/projects.component.html
+++ b/uasdm-ui/src/app/site/component/projects.component.html
@@ -150,8 +150,9 @@
                         (click)="select(node, null, $event)">
                         <div class="card-body">
                           <i (click)="handleExpand(node, $event)" class="fa fa-caret-left expand-arrow-ico pull-right"
-                            [ngClass]="{'fa-rotate-270':node.active}" style="font-size: 25px; padding: 0 5px"
-                            aria-hidden="true"></i>
+                          [ngClass]="{'fa-rotate-270':node.active}" style="font-size: 25px; padding: 0 5px"
+                          aria-hidden="true"></i>
+                          <a class="fa fa-pencil-alt ico-edit pull-right" style="font-size: 15px; padding: 5px 0px" (click)="handleEdit(node, $event)" title="Edit"></a>                          
 
                           <h4 style="word-break: break-all;">{{node.name}}</h4>
                           <p><b>{{node.numberOfChildren}}</b> {{getMetadata(node).childLabel}}</p>
