--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
@@ -66,6 +66,11 @@
             </div>
 
             <div class="form-group">
+              <label for="outFileName">Resolution (cm)</label>
+              <input [(ngModel)]="values.resolution" name="resolution" type="number" class="form-control" placeholder="5" />
+            </div>
+
+            <div class="form-group">
               <boolean-field [(value)]="values.includeGeoLocationFile"
                 label="Use geo location file when processing (if uploaded)"></boolean-field>
             </div>
