--- a/uasdm-ui/src/app/site/component/tasks/tasks-panel.component.html
+++ b/uasdm-ui/src/app/site/component/tasks/tasks-panel.component.html
@@ -50,13 +50,13 @@
             <div class="col-sm-12">
               <div class="button-holder" style="margin-top: 30px;">
                 <button class="btn btn-default" *ngIf="task.actions.length > 0" (click)="task.showError = !task.showError">{{task.showError ? 'Hide' : 'Show'}} Messages</button>
-                <button class="btn btn-default" *ngIf="task.odmOutput" (click)="showODMOutput = !showODMOutput">Show Detailed Log Output</button>
+                <button class="btn btn-default" *ngIf="task.odmOutput" (click)="task.showODMOutput = !task.showODMOutput">Show Detailed Log Output</button>
                 <button class="btn btn-default caution" (click)="removeTask(task)">Delete Task</button>
               </div>
             </div>
           </div>
 
-          <div *ngIf="task.odmOutput && showODMOutput" class="row">
+          <div *ngIf="task.odmOutput && task.showODMOutput" class="row">
             <div class="col-sm-12">
               <h4>Output:</h4>
               <textarea style="color:grey;width:500px;height:200px;" [innerHTML]="task.odmOutput"></textarea>
