chore: updated file extension support for ptcloud to include .las

--- a/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/upload-modal.component.html
@@ -234,7 +234,7 @@
               <tbody *ngIf="uploadTarget === 'ptcloud'">
                 <tr>
                   <td></td>
-                  <td>laz</td>
+                  <td>laz, las</td>
                 </tr>
               </tbody>
               <tbody *ngIf="uploadTarget === 'dem'">
