--- a/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
+++ b/uasdm-ui/src/app/site/component/modal/run-ortho-modal.component.html
@@ -18,11 +18,39 @@
         </div>
 
         <div class="form-group">
-            <label for="outFileName">Resolution (cm)</label>
-            <input [(ngModel)]="config.resolution" name="resolution" type="number" class="form-control"
-                placeholder="5" />
+            <label for="resolution">Resolution (cm)</label>
+            <input [(ngModel)]="config.resolution" name="resolution" type="number" class="form-control" placeholder="5"
+                step="1" min="0" />
         </div>
 
+        <div class="form-group">
+            <label for="videoResolution">Maximum output resolution of extracted video frames in pixels</label>
+            <input [(ngModel)]="config.videoResolution" name="videoResolution" type="number" class="form-control"
+                placeholder="4000" step="1" min="0" />
+        </div>
+
+        <div class="form-group">
+            <label for="matcherNeighbors">Matcher Nieghbors</label>
+            <input [(ngModel)]="config.matcherNeighbors" name="matcherNeighbors" type="number" class="form-control"
+                placeholder="0" step="1" min="0" />
+        </div>
+
+        <div class="form-group">
+            <label for="minNumFeatures">Minimum number of features to extract per image</label>
+            <input [(ngModel)]="config.minNumFeatures" name="minNumFeatures" type="number" class="form-control"
+                placeholder="10000" step="1" min="0" />
+        </div>
+
+        <div class="form-group">
+            <label for="pcQuality">Generated point cloud quality</label>
+            <select [(ngModel)]="config.pcQuality" name="pcQuality" class="form-control" >
+                <option value="ULTRA">ULTRA</option>
+                <option value="HIGH">HIGH</option>
+                <option value="MEDIUM">MEDIUM</option>
+                <option value="LOW">LOW</option>
+                <option value="LOWEST">LOWEST</option>
+            </select>
+        </div>
 
         <div class="form-group">
             <boolean-field [(value)]="config.includeGeoLocationFile"
